gen/LPP_grammarParser.java
// Generated from D:/Universidad/Lenguajes/IntroANTLR/Lpp_Antlr/grammar/LPP_grammar.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class LPP_grammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		Procedure=1, Boolean=2, Then=3, While=4, Register=5, Character=6, Write=7, 
		Function=8, Array=9, Return=10, String=11, Repeat=12, Call=13, Begin=14, 
		Integer=15, Until=16, Do=17, Double=18, Else=19, For=20, Case=21, Read=22, 
		End=23, Var=24, Of=25, If=26, ProcNewLine=27, PER=28, COM=29, COL=30, 
		OBRA=31, CBRA=32, OPAR=33, CPAR=34, ASG=35, GEQ=36, GRT=37, LEQ=38, LES=39, 
		NEQ=40, EQU=41, SUM=42, SUB=43, TMS=44, DIV=45, IDV=46, MOD=47, POW=48, 
		AND=49, OR=50, NOT=51, INT_VAL=52, DOUBLE_VAL=53, CHAR_VAL=54, STRING_VAL=55, 
		TRUE_VAL=56, FALSE_VAL=57, ID=58, NEWLINE=59, SPACE=60, SLC=61, MLC=62;
	public static final int
		RULE_program = 0, RULE_register = 1, RULE_subprograms = 2, RULE_procedure = 3, 
		RULE_function = 4, RULE_parameters = 5, RULE_singlePar = 6, RULE_variables = 7, 
		RULE_singleVar = 8, RULE_varType = 9, RULE_idList = 10, RULE_intList = 11, 
		RULE_mainCode = 12, RULE_subroutineCode = 13, RULE_simpleRoutine = 14, 
		RULE_sentences = 15, RULE_singleSentence = 16, RULE_read = 17, RULE_write = 18, 
		RULE_assign = 19, RULE_call = 20, RULE_if = 21, RULE_else = 22, RULE_switch = 23, 
		RULE_caseOpt = 24, RULE_defaultCase = 25, RULE_while = 26, RULE_for = 27, 
		RULE_repeat = 28, RULE_return = 29, RULE_exprList = 30, RULE_expr = 31, 
		RULE_literal = 32;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "register", "subprograms", "procedure", "function", "parameters", 
			"singlePar", "variables", "singleVar", "varType", "idList", "intList", 
			"mainCode", "subroutineCode", "simpleRoutine", "sentences", "singleSentence", 
			"read", "write", "assign", "call", "if", "else", "switch", "caseOpt", 
			"defaultCase", "while", "for", "repeat", "return", "exprList", "expr", 
			"literal"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, "'.'", "','", "':'", "'['", "']'", "'('", "')'", 
			"'<-'", "'>='", "'>'", "'<='", "'<'", "'<>'", "'='", "'+'", "'-'", "'*'", 
			"'/'", null, null, "'^'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "Procedure", "Boolean", "Then", "While", "Register", "Character", 
			"Write", "Function", "Array", "Return", "String", "Repeat", "Call", "Begin", 
			"Integer", "Until", "Do", "Double", "Else", "For", "Case", "Read", "End", 
			"Var", "Of", "If", "ProcNewLine", "PER", "COM", "COL", "OBRA", "CBRA", 
			"OPAR", "CPAR", "ASG", "GEQ", "GRT", "LEQ", "LES", "NEQ", "EQU", "SUM", 
			"SUB", "TMS", "DIV", "IDV", "MOD", "POW", "AND", "OR", "NOT", "INT_VAL", 
			"DOUBLE_VAL", "CHAR_VAL", "STRING_VAL", "TRUE_VAL", "FALSE_VAL", "ID", 
			"NEWLINE", "SPACE", "SLC", "MLC"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "LPP_grammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public LPP_grammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public VariablesContext variables() {
			return getRuleContext(VariablesContext.class,0);
		}
		public SubprogramsContext subprograms() {
			return getRuleContext(SubprogramsContext.class,0);
		}
		public MainCodeContext mainCode() {
			return getRuleContext(MainCodeContext.class,0);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(LPP_grammarParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(LPP_grammarParser.NEWLINE, i);
		}
		public List<RegisterContext> register() {
			return getRuleContexts(RegisterContext.class);
		}
		public RegisterContext register(int i) {
			return getRuleContext(RegisterContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LPP_grammarListener ) ((LPP_grammarListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LPP_grammarListener ) ((LPP_grammarListener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(69);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NEWLINE) {
				{
				{
				setState(66);
				match(NEWLINE);
				}
				}
				setState(71);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(75);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==Register) {
				{
				{
				setState(72);
				register();
				}
				}
				setState(77);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(78);
			variables();
			setState(79);
			subprograms();
			setState(80);
			mainCode();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RegisterContext extends ParserRuleContext {
		public List<TerminalNode> Register() { return getTokens(LPP_grammarParser.Register); }
		public TerminalNode Register(int i) {
			return getToken(LPP_grammarParser.Register, i);
		}
		public TerminalNode ID() { return getToken(LPP_grammarParser.ID, 0); }
		public VariablesContext variables() {
			return getRuleContext(VariablesContext.class,0);
		}
		public TerminalNode End() { return getToken(LPP_grammarParser.End, 0); }
		public List<TerminalNode> NEWLINE() { return getTokens(LPP_grammarParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(LPP_grammarParser.NEWLINE, i);
		}
		public RegisterContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_register; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LPP_grammarListener ) ((LPP_grammarListener)listener).enterRegister(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LPP_grammarListener ) ((LPP_grammarListener)listener).exitRegister(this);
		}
	}

	public final RegisterContext register() throws RecognitionException {
		RegisterContext _localctx = new RegisterContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_register);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(82);
			match(Register);
			setState(83);
			match(ID);
			setState(85); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(84);
				match(NEWLINE);
				}
				}
				setState(87); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==NEWLINE );
			setState(89);
			variables();
			setState(90);
			match(End);
			setState(91);
			match(Register);
			setState(93); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(92);
				match(NEWLINE);
				}
				}
				setState(95); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==NEWLINE );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SubprogramsContext extends ParserRuleContext {
		public List<ProcedureContext> procedure() {
			return getRuleContexts(ProcedureContext.class);
		}
		public ProcedureContext procedure(int i) {
			return getRuleContext(ProcedureContext.class,i);
		}
		public List<FunctionContext> function() {
			return getRuleContexts(FunctionContext.class);
		}
		public FunctionContext function(int i) {
			return getRuleContext(FunctionContext.class,i);
		}
		public SubprogramsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_subprograms; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LPP_grammarListener ) ((LPP_grammarListener)listener).enterSubprograms(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LPP_grammarListener ) ((LPP_grammarListener)listener).exitSubprograms(this);
		}
	}

	public final SubprogramsContext subprograms() throws RecognitionException {
		SubprogramsContext _localctx = new SubprogramsContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_subprograms);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(101);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==Procedure || _la==Function) {
				{
				setState(99);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case Procedure:
					{
					setState(97);
					procedure();
					}
					break;
				case Function:
					{
					setState(98);
					function();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(103);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProcedureContext extends ParserRuleContext {
		public TerminalNode Procedure() { return getToken(LPP_grammarParser.Procedure, 0); }
		public TerminalNode ID() { return getToken(LPP_grammarParser.ID, 0); }
		public VariablesContext variables() {
			return getRuleContext(VariablesContext.class,0);
		}
		public SubroutineCodeContext subroutineCode() {
			return getRuleContext(SubroutineCodeContext.class,0);
		}
		public TerminalNode OPAR() { return getToken(LPP_grammarParser.OPAR, 0); }
		public ParametersContext parameters() {
			return getRuleContext(ParametersContext.class,0);
		}
		public TerminalNode CPAR() { return getToken(LPP_grammarParser.CPAR, 0); }
		public List<TerminalNode> NEWLINE() { return getTokens(LPP_grammarParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(LPP_grammarParser.NEWLINE, i);
		}
		public ProcedureContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_procedure; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LPP_grammarListener ) ((LPP_grammarListener)listener).enterProcedure(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LPP_grammarListener ) ((LPP_grammarListener)listener).exitProcedure(this);
		}
	}

	public final ProcedureContext procedure() throws RecognitionException {
		ProcedureContext _localctx = new ProcedureContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_procedure);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(104);
			match(Procedure);
			setState(105);
			match(ID);
			setState(110);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==OPAR) {
				{
				setState(106);
				match(OPAR);
				setState(107);
				parameters();
				setState(108);
				match(CPAR);
				}
			}

			setState(113); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(112);
				match(NEWLINE);
				}
				}
				setState(115); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==NEWLINE );
			setState(117);
			variables();
			setState(118);
			subroutineCode();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FunctionContext extends ParserRuleContext {
		public TerminalNode Function() { return getToken(LPP_grammarParser.Function, 0); }
		public TerminalNode ID() { return getToken(LPP_grammarParser.ID, 0); }
		public TerminalNode COL() { return getToken(LPP_grammarParser.COL, 0); }
		public VarTypeContext varType() {
			return getRuleContext(VarTypeContext.class,0);
		}
		public VariablesContext variables() {
			return getRuleContext(VariablesContext.class,0);
		}
		public SubroutineCodeContext subroutineCode() {
			return getRuleContext(SubroutineCodeContext.class,0);
		}
		public TerminalNode OPAR() { return getToken(LPP_grammarParser.OPAR, 0); }
		public ParametersContext parameters() {
			return getRuleContext(ParametersContext.class,0);
		}
		public TerminalNode CPAR() { return getToken(LPP_grammarParser.CPAR, 0); }
		public List<TerminalNode> NEWLINE() { return getTokens(LPP_grammarParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(LPP_grammarParser.NEWLINE, i);
		}
		public FunctionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LPP_grammarListener ) ((LPP_grammarListener)listener).enterFunction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LPP_grammarListener ) ((LPP_grammarListener)listener).exitFunction(this);
		}
	}

	public final FunctionContext function() throws RecognitionException {
		FunctionContext _localctx = new FunctionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_function);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(120);
			match(Function);
			setState(121);
			match(ID);
			setState(126);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==OPAR) {
				{
				setState(122);
				match(OPAR);
				setState(123);
				parameters();
				setState(124);
				match(CPAR);
				}
			}

			setState(128);
			match(COL);
			setState(129);
			varType();
			setState(131); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(130);
				match(NEWLINE);
				}
				}
				setState(133); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==NEWLINE );
			setState(135);
			variables();
			setState(136);
			subroutineCode();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ParametersContext extends ParserRuleContext {
		public List<SingleParContext> singlePar() {
			return getRuleContexts(SingleParContext.class);
		}
		public SingleParContext singlePar(int i) {
			return getRuleContext(SingleParContext.class,i);
		}
		public List<TerminalNode> COM() { return getTokens(LPP_grammarParser.COM); }
		public TerminalNode COM(int i) {
			return getToken(LPP_grammarParser.COM, i);
		}
		public ParametersContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parameters; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LPP_grammarListener ) ((LPP_grammarListener)listener).enterParameters(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LPP_grammarListener ) ((LPP_grammarListener)listener).exitParameters(this);
		}
	}

	public final ParametersContext parameters() throws RecognitionException {
		ParametersContext _localctx = new ParametersContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_parameters);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(138);
			singlePar();
			setState(143);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COM) {
				{
				{
				setState(139);
				match(COM);
				setState(140);
				singlePar();
				}
				}
				setState(145);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SingleParContext extends ParserRuleContext {
		public VarTypeContext varType() {
			return getRuleContext(VarTypeContext.class,0);
		}
		public TerminalNode ID() { return getToken(LPP_grammarParser.ID, 0); }
		public TerminalNode Var() { return getToken(LPP_grammarParser.Var, 0); }
		public SingleParContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_singlePar; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LPP_grammarListener ) ((LPP_grammarListener)listener).enterSinglePar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LPP_grammarListener ) ((LPP_grammarListener)listener).exitSinglePar(this);
		}
	}

	public final SingleParContext singlePar() throws RecognitionException {
		SingleParContext _localctx = new SingleParContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_singlePar);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(147);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==Var) {
				{
				setState(146);
				match(Var);
				}
			}

			setState(149);
			varType();
			setState(150);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VariablesContext extends ParserRuleContext {
		public List<SingleVarContext> singleVar() {
			return getRuleContexts(SingleVarContext.class);
		}
		public SingleVarContext singleVar(int i) {
			return getRuleContext(SingleVarContext.class,i);
		}
		public VariablesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variables; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LPP_grammarListener ) ((LPP_grammarListener)listener).enterVariables(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LPP_grammarListener ) ((LPP_grammarListener)listener).exitVariables(this);
		}
	}

	public final VariablesContext variables() throws RecognitionException {
		VariablesContext _localctx = new VariablesContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_variables);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(155);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 288230376152009284L) != 0)) {
				{
				{
				setState(152);
				singleVar();
				}
				}
				setState(157);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SingleVarContext extends ParserRuleContext {
		public VarTypeContext varType() {
			return getRuleContext(VarTypeContext.class,0);
		}
		public IdListContext idList() {
			return getRuleContext(IdListContext.class,0);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(LPP_grammarParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(LPP_grammarParser.NEWLINE, i);
		}
		public SingleVarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_singleVar; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LPP_grammarListener ) ((LPP_grammarListener)listener).enterSingleVar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LPP_grammarListener ) ((LPP_grammarListener)listener).exitSingleVar(this);
		}
	}

	public final SingleVarContext singleVar() throws RecognitionException {
		SingleVarContext _localctx = new SingleVarContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_singleVar);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(158);
			varType();
			setState(159);
			idList();
			setState(161); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(160);
				match(NEWLINE);
				}
				}
				setState(163); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==NEWLINE );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VarTypeContext extends ParserRuleContext {
		public TerminalNode Integer() { return getToken(LPP_grammarParser.Integer, 0); }
		public TerminalNode Double() { return getToken(LPP_grammarParser.Double, 0); }
		public TerminalNode Boolean() { return getToken(LPP_grammarParser.Boolean, 0); }
		public TerminalNode Character() { return getToken(LPP_grammarParser.Character, 0); }
		public TerminalNode String() { return getToken(LPP_grammarParser.String, 0); }
		public TerminalNode OBRA() { return getToken(LPP_grammarParser.OBRA, 0); }
		public TerminalNode INT_VAL() { return getToken(LPP_grammarParser.INT_VAL, 0); }
		public TerminalNode CBRA() { return getToken(LPP_grammarParser.CBRA, 0); }
		public TerminalNode Array() { return getToken(LPP_grammarParser.Array, 0); }
		public IntListContext intList() {
			return getRuleContext(IntListContext.class,0);
		}
		public TerminalNode Of() { return getToken(LPP_grammarParser.Of, 0); }
		public VarTypeContext varType() {
			return getRuleContext(VarTypeContext.class,0);
		}
		public TerminalNode ID() { return getToken(LPP_grammarParser.ID, 0); }
		public VarTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varType; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LPP_grammarListener ) ((LPP_grammarListener)listener).enterVarType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LPP_grammarListener ) ((LPP_grammarListener)listener).exitVarType(this);
		}
	}

	public final VarTypeContext varType() throws RecognitionException {
		VarTypeContext _localctx = new VarTypeContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_varType);
		int _la;
		try {
			setState(183);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case Integer:
				enterOuterAlt(_localctx, 1);
				{
				setState(165);
				match(Integer);
				}
				break;
			case Double:
				enterOuterAlt(_localctx, 2);
				{
				setState(166);
				match(Double);
				}
				break;
			case Boolean:
				enterOuterAlt(_localctx, 3);
				{
				setState(167);
				match(Boolean);
				}
				break;
			case Character:
				enterOuterAlt(_localctx, 4);
				{
				setState(168);
				match(Character);
				}
				break;
			case String:
				enterOuterAlt(_localctx, 5);
				{
				setState(169);
				match(String);
				setState(173);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==OBRA) {
					{
					setState(170);
					match(OBRA);
					setState(171);
					match(INT_VAL);
					setState(172);
					match(CBRA);
					}
				}
